изменила размер рамки border-blue  в миксе на min-height: 100px

--- a/scss-css/blocks/mixin.scss
+++ b/scss-css/blocks/mixin.scss
@@ -34,7 +34,7 @@ $primory-color: #03a9f4;
   padding: 10px;
 
   width: $width;
-  height: $height;
+  min-height: $height;
 
   border-radius: 16px;
 
