--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -589,7 +589,7 @@
 .basic-info-list {
   padding: 10px;
   width: 265px;
-  height: 100px;
+  min-height: 100px;
   border-radius: 16px;
   outline: 1px solid #03a9f4;
   display: flex;
@@ -755,7 +755,7 @@
   padding: 40px;
   padding: 10px;
   width: 240px;
-  height: 450px;
+  min-height: 450px;
   border-radius: 16px;
   outline: 1px solid #03a9f4;
   display: flex;
@@ -810,7 +810,7 @@
   margin-bottom: 20px;
   padding: 10px;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   border-radius: 16px;
   outline: 1px solid #03a9f4;
   display: flex;
@@ -924,7 +924,7 @@
   right: 10px;
   padding: 10px;
   width: 280px;
-  height: 550px;
+  min-height: 550px;
   border-radius: 16px;
   outline: 1px solid #03a9f4;
   display: flex;
