--- a/scss-css/blocks/category-page.css
+++ b/scss-css/blocks/category-page.css
@@ -26,7 +26,7 @@
 
 .link-item-cart-desc {
   position: absolute;
-  top: -1px;
+  top: -1000px;
   opacity: 0;
   text-decoration: none;
 }
@@ -230,12 +230,13 @@
     max-width: 310px;
     margin: 0px 20px 20px 0px;
   }
-  .item-details {
+  .item-cart-details {
     position: absolute;
     opacity: 0;
   }
   .link-item-cart-desc {
     position: relative;
+    top: 0;
     opacity: 1;
   }
   .item-title-details::after {
