--- a/scss-css/blocks/category-page.scss
+++ b/scss-css/blocks/category-page.scss
@@ -36,7 +36,7 @@ $primory-color: #03a9f4;
 
 .link-item-cart-desc {
   position: absolute;
-  top: -1px;
+  top: -1000px;
   opacity: 0;
 
   text-decoration: none;
@@ -233,14 +233,14 @@ $primory-color: #03a9f4;
     margin: 0px 20px 20px 0px;
   }
 
-  .item-details {
+  .item-cart-details {
     position: absolute;
     opacity: 0;
   }
 
   .link-item-cart-desc {
     position: relative;
-
+    top: 0;
     opacity: 1;
   }
 
