--- a/scss-css/blocks/reviews-page.css
+++ b/scss-css/blocks/reviews-page.css
@@ -51,7 +51,7 @@
   right: 10px;
   padding: 10px;
   width: 280px;
-  height: 550px;
+  min-height: 550px;
   border-radius: 16px;
   outline: 1px solid #03a9f4;
   display: flex;
