--- a/scss-css/blocks/reviews.css
+++ b/scss-css/blocks/reviews.css
@@ -43,7 +43,7 @@
   padding: 40px;
   padding: 10px;
   width: 240px;
-  height: 450px;
+  min-height: 450px;
   border-radius: 16px;
   outline: 1px solid #03a9f4;
   display: flex;
@@ -98,7 +98,7 @@
   margin-bottom: 20px;
   padding: 10px;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   border-radius: 16px;
   outline: 1px solid #03a9f4;
   display: flex;
