--- a/scss-css/blocks/category-page.css
+++ b/scss-css/blocks/category-page.css
@@ -212,6 +212,7 @@
   }
   .item-cart {
     margin: 10px;
+    width: 500px;
   }
   .item-list[open] > summary::after {
     background-size: 70%;
