--- a/scss-css/blocks/reviews.css
+++ b/scss-css/blocks/reviews.css
@@ -10,8 +10,6 @@
 
 .reviews-container {
   padding: 50px 0px;
-  min-width: 280px;
-  max-width: 450px;
 }
 
 .reviews-title {
@@ -42,8 +40,8 @@
   margin: 20px;
   padding: 40px;
   padding: 10px;
-  width: 240px;
-  min-height: 350px;
+  width: 200px;
+  min-height: 450px;
   border-radius: 16px;
   outline: 1px solid #03a9f4;
   display: flex;
@@ -97,7 +95,7 @@
 
 /* review-cart */
 .review-cart {
-  margin-bottom: 20px;
+  margin: 20px 10px;
   padding: 10px;
   width: 100%;
   min-height: 100%;
@@ -116,10 +114,14 @@
 
 @media (min-width: 420px) {
   .review-cart-text {
-    width: 300px;
+    width: 240px;
   }
 }
 @media (min-width: 620px) {
+  .review-cart-text {
+    width: 380px;
+    min-height: 350px;
+  }
   .reviews-title {
     font-size: 20px;
   }
@@ -139,17 +141,22 @@
     translate: -20px 0px;
   }
 }
-@media (min-width: 1024px) {
-  .reviews-title {
+@media (min-width: 700px) {
+  .review-cart-text {
+    width: 315px;
+  }
+  /*.reviews-title {
     font-size: 25px;
   }
+
   .review-author-name,
   .review-text {
     font-size: 20px;
   }
+
   .item-name,
   .guide-name,
   .review-date {
     font-size: 16px;
-  }
+  }*/
 }/*# sourceMappingURL=reviews.css.map */
