--- a/scss-css/blocks/blog-page.css
+++ b/scss-css/blocks/blog-page.css
@@ -1,4 +1,70 @@
 /* variables */
 /*mixin */
 /* variables */
-/* mixin *//*# sourceMappingURL=blog-page.css.map */
+/* mixin */
+/* blog cart */
+.blog-cart {
+  margin: 20px 0px;
+  padding: 20px;
+  /*shadow */
+  outline: 1px solid #d6d3d3;
+  border-bottom: 2px solid #c4c2c2;
+  border-radius: 16px;
+  border-radius: 16px;
+}
+
+.blog-title::-webkit-details-marker {
+  display: none;
+}
+
+.blog-title {
+  font-family: "Gabriela", serif;
+  font-size: 20px;
+  font-weight: 400;
+  font-style: normal;
+  color: #03a9f4;
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  transition: 1s;
+}
+
+.blog-title::after {
+  margin: 10px 0px 0px 10px;
+  content: "";
+  width: 20px;
+  height: 20px;
+  background: url("../img/icon-arrow-down.png") no-repeat;
+  background-size: 60%;
+  padding-right: 0.5em;
+  display: inline-block;
+}
+
+.blog-list[open] > summary::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  background: url("../img/icon-arrow-up.png") no-repeat;
+  background-size: 60%;
+  padding-right: 0.5em;
+  display: inline-block;
+}
+
+.blog-list[open] {
+  border-radius: 16px 16px 0px 0px;
+}
+
+.blog-desc {
+  padding-top: 50px;
+  font-family: "Gabriela", serif;
+  font-size: 16px;
+  font-weight: 400;
+  font-style: normal;
+  color: black;
+}
+
+@media (min-width: 620px) {
+  .blog-page-container {
+    margin: 20px;
+  }
+}/*# sourceMappingURL=blog-page.css.map */
