--- a/scss-css/blocks/main.scss
+++ b/scss-css/blocks/main.scss
@@ -14,6 +14,12 @@ $main-background-color: #fff6ef;
 
   outline: 1px solid green;
 }
+
+.main-info-title,
+.desc-title {
+  @include font(20px);
+}
+
 .main-info-desc,
 .main-text-item {
   @include font();
