--- a/scss-css/blocks/reviews.css
+++ b/scss-css/blocks/reviews.css
@@ -48,6 +48,11 @@
   border: none;
 }
 
+.second-cart,
+.third-card {
+  display: none;
+}
+
 .review-cart-text {
   font-family: "Gabriela", serif;
   font-size: 16px;
@@ -134,6 +139,9 @@
   .carousel-item.active {
     display: flex;
   }
+  .second-cart {
+    display: block;
+  }
   .review-cart-slider {
     width: 300px;
     min-height: 450px;
@@ -148,8 +156,11 @@
     translate: -20px 0px;
   }
 }
-@media (min-width: 700px) {
+@media (min-width: 1024px) {
   .review-cart-slider {
     width: 315px;
+  }
+  .third-card {
+    display: block;
   }
 }/*# sourceMappingURL=reviews.css.map */
