--- a/scss-css/blocks/reviews.css
+++ b/scss-css/blocks/reviews.css
@@ -48,7 +48,7 @@
   border: none;
 }
 
-.second-cart,
+.second-card,
 .third-card {
   display: none;
 }
@@ -136,10 +136,13 @@
   }
 }
 @media (min-width: 620px) {
+  .carousel-item-next,
+  .carousel-item-prev,
   .carousel-item.active {
     display: flex;
+    justify-content: space-around;
   }
-  .second-cart {
+  .second-card {
     display: block;
   }
   .review-cart-slider {
@@ -156,10 +159,12 @@
     translate: -20px 0px;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 700px) {
   .review-cart-slider {
     width: 315px;
   }
+}
+@media (min-width: 1024px) {
   .third-card {
     display: block;
   }
