--- a/scss-css/blocks/categories.scss
+++ b/scss-css/blocks/categories.scss
@@ -90,10 +90,12 @@ $main-background-color: #fff6ef;
 
 .category-title {
   padding: 10px;
-  width: 50%;
+  width: 52%;
 
   @include font(20px, $primory-color);
   background-color: #ffffff;
+
+  text-align: center;
 }
 
 @media (min-width: 620px) {
