--- a/scss-css/blocks/header.css
+++ b/scss-css/blocks/header.css
@@ -155,7 +155,7 @@
   /* header logo */
   .logo {
     padding-top: 10px;
-    width: 25%;
+    width: 155px;
   }
   .title {
     font-size: 25px;
