--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -160,7 +160,7 @@
   /* header logo */
   .logo {
     padding-top: 10px;
-    width: 25%;
+    width: 155px;
   }
   .title {
     font-size: 25px;
