--- a/scss-css/blocks/categories.scss
+++ b/scss-css/blocks/categories.scss
@@ -10,7 +10,7 @@ $main-background-color: #fff6ef;
 
 .categories {
   padding: 50px 20px;
-  margin: 0px 10px;
+  margin: 0px 10px 50px 10px;
 
   display: flex;
   justify-content: center;
