--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -369,7 +369,7 @@
 /* section categories */
 .categories {
   padding: 50px 20px;
-  margin: 0px 10px;
+  margin: 0px 10px 50px 10px;
   display: flex;
   justify-content: center;
   border-radius: 16px;
