импортировала файл стилей страницы галереи в основной файл стилей

--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -1060,6 +1060,24 @@
   text-align: center;
 }
 
+/* section gallery page*/
+/* variables */
+/* $main-background-color: #d7dcdf; */
+/* mixin */
+/* variables */
+/* mixin */
+.gallery-img {
+  position: relative;
+  transition: 0.5s;
+}
+.gallery-img:hover .overlay {
+  opacity: 1;
+}
+
+.overlay {
+  opacity: 0;
+}
+
 /* section blog page */
 /* variables */
 /*mixin */
