--- a/scss-css/style.scss
+++ b/scss-css/style.scss
@@ -25,6 +25,9 @@
 /* section gallery */
 @import "blocks/gallery.scss";
 
+/* section gallery page*/
+@import "blocks/gallery-page.scss";
+
 /* section blog page */
 @import "blocks/blog-page.scss";
 
