--- a/scss-css/blocks/gallery-page.scss
+++ b/scss-css/blocks/gallery-page.scss
@@ -11,48 +11,44 @@ $main-background-color: #fff6ef;
 }
 
 .gallery-list {
-  display: flex;
-  justify-content: center;
+  margin: 0 auto;
+  max-width: fit-content;
+}
+
+.gallery-img,
+.gallery-line {
+  margin-bottom: 20px;
+
+  width: 300px;
+  height: 220px;
+
+  transition: 0.5s;
 }
 
 .gallery-line {
-  width: 280px;
-
-  position: relative;
-  transition: 0.5s;
-
   &:hover .gallery-img {
     transform: scale(1.5);
   }
 
   &:hover .overlay {
-    opacity: 1;
+    transform: scale(1);
   }
 }
 
 .gallery-img {
-  width: 280px;
-  height: 200px;
-
-  transition: 0.5s;
+  border-radius: 16px;
 }
 
 .overlay {
-  height: 240px;
-
-  position: absolute;
-
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  height: 220px;
 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
 
-  opacity: 0;
+  transform: scale(0);
+  translate: 0px -200px;
   transition: 0.5s;
 }
 
@@ -68,4 +64,24 @@ $main-background-color: #fff6ef;
 
 .gallery-link-title {
   @include font();
+}
+
+@media (min-width: 620px) {
+  .gallery-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .gallery-line,
+  .gallery-img {
+    width: 380px;
+  }
+}
+
+@media (min-width: 700px) {
+  .gallery-line,
+  .gallery-img {
+    width: 320px;
+  }
 }
