--- a/scss-css/blocks/gallery.scss
+++ b/scss-css/blocks/gallery.scss
@@ -24,3 +24,17 @@ $primory-color: #03a9f4;
   @include font(20px, $primory-color);
   text-align: center;
 }
+
+/* carousel */
+
+.carousel-item-border {
+  border-radius: 16px;
+}
+
+button.carousel-control-prev.btn-slider-gallery {
+  translate: -40px 0px;
+}
+
+button.carousel-control-next.btn-slider-gallery {
+  translate: 40px 0px;
+}
