--- a/scss-css/blocks/category-page.scss
+++ b/scss-css/blocks/category-page.scss
@@ -200,9 +200,10 @@ $primory-color: #03a9f4;
 }
 
 @media (min-width: 620px) {
-  .items-container {
+  .items-cart {
     padding: 50px 20px;
 
+    display: flex;
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
