--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -677,8 +677,9 @@
   }
 }
 @media (min-width: 620px) {
-  .items-container {
+  .items-cart {
     padding: 50px 20px;
+    display: flex;
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
@@ -851,7 +852,7 @@
 
 @media (min-width: 420px) {
   .review-cart-slider {
-    width: 370px;
+    width: 330px;
   }
 }
 @media (min-width: 620px) {
