--- a/scss-css/blocks/gallery.css
+++ b/scss-css/blocks/gallery.css
@@ -29,10 +29,11 @@
   border-radius: 16px;
 }
 
-button.carousel-control-prev.btn-slider-gallery {
-  translate: -40px 0px;
-}
-
-button.carousel-control-next.btn-slider-gallery {
-  translate: 40px 0px;
+@media (min-width: 600px) {
+  button.carousel-control-prev.btn-slider-gallery {
+    translate: -40px 0px;
+  }
+  button.carousel-control-next.btn-slider-gallery {
+    translate: 40px 0px;
+  }
 }/*# sourceMappingURL=gallery.css.map */
