--- a/scss-css/blocks/gallery.scss
+++ b/scss-css/blocks/gallery.scss
@@ -31,10 +31,12 @@ $primory-color: #03a9f4;
   border-radius: 16px;
 }
 
-button.carousel-control-prev.btn-slider-gallery {
-  translate: -40px 0px;
-}
+@media (min-width: 600px) {
+  button.carousel-control-prev.btn-slider-gallery {
+    translate: -40px 0px;
+  }
 
-button.carousel-control-next.btn-slider-gallery {
-  translate: 40px 0px;
+  button.carousel-control-next.btn-slider-gallery {
+    translate: 40px 0px;
+  }
 }
