заменила картинку в разделе категории на главной странице

--- a/scss-css/blocks/categories.css
+++ b/scss-css/blocks/categories.css
@@ -72,8 +72,8 @@
 }
 
 .high-school-img {
-  background: url(../img/sobor.jpg) center no-repeat;
-  background-size: 120%;
+  background: url(../img/moscow.png) center no-repeat;
+  background-size: 150%;
 }
 
 .graduation-school-img {
