--- a/scss-css/blocks/main.css
+++ b/scss-css/blocks/main.css
@@ -3,11 +3,14 @@
 /* variables */
 /* mixin */
 .main-info-header {
+  background-color: #fff6ef;
+  /* outline: 1px solid green; */
+}
+
+.main-info-container {
   display: flex;
   justify-content: center;
   flex-direction: column-reverse;
-  background-color: #fff6ef;
-  outline: 1px solid green;
 }
 
 .main-info-title,
@@ -79,8 +82,9 @@
 }
 
 @media (min-width: 620px) {
-  .main-info-header {
-    flex-direction: inherit;
+  .main-info-container {
+    flex-direction: row;
+    justify-content: space-between;
   }
   .main-info-desc {
     padding: 20px;
