--- a/scss-css/blocks/categories.scss
+++ b/scss-css/blocks/categories.scss
@@ -79,8 +79,8 @@ $main-background-color: #fff6ef;
 }
 
 .high-school-img {
-  background: url(../img/sobor.jpg) center no-repeat;
-  background-size: 120%;
+  background: url(../img/moscow.png) center no-repeat;
+  background-size: 150%;
 }
 
 .graduation-school-img {
