--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -273,11 +273,14 @@
 /* variables */
 /* mixin */
 .main-info-header {
+  background-color: #fff6ef;
+  /* outline: 1px solid green; */
+}
+
+.main-info-container {
   display: flex;
   justify-content: center;
   flex-direction: column-reverse;
-  background-color: #fff6ef;
-  outline: 1px solid green;
 }
 
 .main-info-title,
@@ -349,8 +352,9 @@
 }
 
 @media (min-width: 620px) {
-  .main-info-header {
-    flex-direction: inherit;
+  .main-info-container {
+    flex-direction: row;
+    justify-content: space-between;
   }
   .main-info-desc {
     padding: 20px;
@@ -435,8 +439,8 @@
 }
 
 .high-school-img {
-  background: url(../img/sobor.jpg) center no-repeat;
-  background-size: 120%;
+  background: url(../img/moscow.png) center no-repeat;
+  background-size: 150%;
 }
 
 .graduation-school-img {
@@ -1345,7 +1349,7 @@ body {
 .page {
   display: flex;
   flex-direction: column;
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
 }
 
 .hidden-section {
@@ -1362,12 +1366,12 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0px 20px;
-  outline: 1px solid blue;
+  /* outline: 1px solid blue; */
 }
 
 .main {
   flex-grow: 1;
-  outline: 5px solid green;
+  /* outline: 5px solid green; */
 }
 
 @media (min-width: 620px) {
