--- a/scss-css/style.scss
+++ b/scss-css/style.scss
@@ -48,7 +48,7 @@ body {
   display: flex;
   flex-direction: column;
 
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
 }
 
 .hidden-section {
@@ -60,12 +60,12 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0px 20px;
-  outline: 1px solid blue;
+  /* outline: 1px solid blue; */
 }
 
 .main {
   flex-grow: 1;
-  outline: 5px solid green;
+  /* outline: 5px solid green; */
 }
 
 @media (min-width: 620px) {
