--- a/scss-css/blocks/breadcrumbles.css
+++ b/scss-css/blocks/breadcrumbles.css
@@ -1,9 +1,12 @@
+/* variables */
 /* mixin */
 /* variables */
 /* mixin */
 /* breadcrumbles */
 .breadcrumbles {
-  padding: 10px 0px;
+  margin: 10px 0px;
+  border-top: 1px solid #03a9f4;
+  border-bottom: 1px solid #03a9f4;
 }
 
 .menu-breadcrumbles {
