--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -677,7 +677,7 @@
 }
 @media (min-width: 620px) {
   .items-cart {
-    padding: 50px 20px;
+    padding: 0px 20px;
     display: flex;
     justify-content: center;
     flex-direction: row;
@@ -701,7 +701,7 @@
 }
 @media (min-width: 700px) {
   .item-cart {
-    max-width: 310px;
+    width: 310px;
     margin: 0px 20px 20px 0px;
   }
   .item-cart-details {
@@ -715,6 +715,11 @@
   }
   .item-title-details::after {
     background: none;
+  }
+}
+@media (min-width: 1100px) {
+  .item-cart {
+    width: 500px;
   }
 }
 /* section reviews */
