удалила верхнюю и нижнюю гамку в хлебных крошках и добавида нижнюю рамку в шапку сайта

--- a/scss-css/blocks/header.css
+++ b/scss-css/blocks/header.css
@@ -3,6 +3,10 @@
 /* variables */
 /* mixin */
 /* header logo */
+.header-container {
+  border-bottom: 1px solid rgba(3, 169, 244, 0.2784313725);
+}
+
 .nav,
 .logo-href {
   display: flex;
