--- a/scss-css/blocks/categories.css
+++ b/scss-css/blocks/categories.css
@@ -41,6 +41,13 @@
 
 .category-link {
   text-decoration: none;
+  transition: 0.5s;
+}
+.category-link:hover {
+  transform: scale(1.2);
+}
+.category-link:hover .category-cart {
+  transform: scale(1.2);
 }
 
 /* category-cart */
@@ -51,6 +58,7 @@
   width: 280px;
   height: 200px;
   border-radius: 16px;
+  transition: 0.5s;
 }
 
 .category-cart {
